# acatome-quest-mcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml
docs/: PLAN.md
src/acatome_quest_mcp/: __init__.py  cli.py  db.py  dedup.py  misconceptions.py  models.py  report.py  resolver.py  runner.py  server.py  service.py
src/acatome_quest_mcp/fetchers/: __init__.py  arxiv.py  base.py  unpaywall.py
tests/: fake_db.py  test_dedup.py  test_fetchers.py  test_models.py  test_report.py  test_resolver.py  test_runner.py  test_service.py  test_submit_file.py
