[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "acatome-quest-mcp"
version = "0.3.0"
description = "Paper-request MCP: track, resolve, fetch (OA-only), and flag misconceptions for scientific papers"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.11"
authors = [{ name = "OpenClaw Contributors" }]
keywords = ["mcp", "llm", "papers", "doi", "unpaywall", "arxiv", "citations"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "mcp[cli]>=1.0",
    "psycopg[binary]>=3.1",
    "psycopg_pool>=3.2",
    "httpx>=0.27",
    "acatome-meta>=0.1",
    "rapidfuzz>=3.0",
]

[project.urls]
Homepage = "https://github.com/retospect/acatome-quest-mcp"
Repository = "https://github.com/retospect/acatome-quest-mcp"

[project.scripts]
acatome-quest-mcp = "acatome_quest_mcp.server:main"
acatome-quest-runner = "acatome_quest_mcp.runner:main"
acatome-quest = "acatome_quest_mcp.cli:main"

[project.optional-dependencies]
store = ["acatome-store>=0.1"]
all = ["acatome-quest-mcp[store]"]

[dependency-groups]
dev = [
    "pytest>=8",
    "respx>=0.22",
    "ruff>=0.11",
    "mypy>=1.15",
    "pre-commit>=4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/acatome_quest_mcp"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = [
    "B008",
    "E501",
    "RUF001",
    "SIM108",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B007", "E402", "F841"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "postgres: requires a running PostgreSQL instance (TEST_DATABASE_URL)",
    "network: requires network access",
]
